Refactor: MemberPrincipal 클래스가 OAuth2User 구현체인 DefaultOAuth2User 클래스를 상속받아 사용하도록 변경
- 시큐리티 인증 객체를 커스텀한 MemberPrincipal 클래스가 OAuth2User를 직접 구현하지 않고 이미 구현되어 있는 DefaultOAuth2User 클래스를 상속받아 단순하게 사용할 수 있도록 변경했습니다.
- DefaultOAuth2User 생성자를 호출하기 위해 SocialLoginDto에 필요한 필드를 추가하였습니다.